# tasque

./: .gitignore  CLAUDE.md  LEARNINGS.md  PLAN.md  README.md  pyproject.toml
.claude/agents/: architect.md  implementer.md  researcher.md  reviewer.md  tester.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/ui-component/: SKILL.md
docs/architecture/: feature-5.md
docs/ux/: delete-confirmation.md  edit-screen.md  input-bar.md  main-screen.md
src/tasque/: __init__.py  __main__.py  app.py  controller.py  db.py  models.py  tasque.tcss
src/tasque/screens/: __init__.py  delete_confirm.py  main.py
src/tasque/widgets/: __init__.py  empty_state.py  input_bar.py  todo_item.py  todo_list.py
tests/: test_app.py  test_controller.py  test_db.py  test_main_module.py  test_models.py  test_smoke.py
tests/screens/: __init__.py  test_delete_confirm.py  test_main.py
tests/widgets/: __init__.py  test_input_bar.py  test_todo_item.py  test_todo_list.py
