[project]
name = "tasque"
version = "0.1.0"
description = "A keyboard-driven TUI to-do manager for the terminal."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "textual>=0.60",
]

[project.scripts]
tasque = "tasque.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasque"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
